auth/src/main/resources/kubernetes/AuthClientDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-auth-server
  namespace: api-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-auth-server
  template:
    metadata:
      labels:
        app: api-auth-server
    spec:
      containers:
        - name: api-auth-server
          image: harbor.registry.notypie.dev/apis/auth:0.0.1
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: "YOUR_VOLUME_MOUNT_PATH"
              name: oracle-wallet
              readOnly: true
          ports:
            - name: http
              containerPort: 80
      volumes: # This is also example for Oracle.
        - name: oracle-wallet
          secret:
            secretName: oracle-wallet-config
